Fix Applications menu overflow

--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -145,13 +145,13 @@ div#applications-menu-container {
 div#applications-menu-container:before {
     content: '';
     display: block;
-    width: calc(100% + 130px);
+    width: 100vw;
     height: 1px;
     background-color: transparent;
     position: absolute;
     left: 0;
     bottom: 0;
-    margin: 0 -65px;
+    margin: 0 -30px;
     transition: background-color 0.25s ease;
 }
 
